# moremath

./: LICENSE  README.md  pyproject.toml
src/moremath/: __init__.py  algebra.py  arithmetic.py  geometry.py  prime.py  statistics.py
tests/: __init__.py  test_algebra.py  test_arithmetic.py  test_geometry.py  test_statistics.py
