[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"

[project]
name = "moremath"
version = "1.2.2"
authors = [
  { name="Ananyo Bhattacharya", email="ananyobhattacharya10@gmail.com" },
]
description = "A Python package for advanced mathematical operations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]